# Text-Pass-filter

./: README.md  msra_eval_all.py  test.py  test_single.py  train.py
config/: __init__.py  r18_base.py  r18_ctw.py  r18_ic13.py  r18_ic15.py  r18_msra.py  r18_synth.py  r18_tt.py
dataset/: __init__.py  builder.py
dataset/datasets/: __init__.py  aug.py  onlinedataset.py  parser.py  supervision.py  util.py
eval/: eval_ctw.sh  eval_ic15.sh  eval_msra.sh  eval_tt.sh
eval/ctw/: eval.py  eval_all.py
eval/msra/: eval.py  eval_all.py  file_util.py
eval/tt/: Deteval.py
models/: __init__.py  first2023.py
models/backbone/: __init__.py  resnet3.py  resnet7.py
models/head/: __init__.py  decoder (1).py  decoder.py  feature_head.py  feature_head2.py  single_det.py
models/loss/: __init__.py  bce_loss.py  cross_entropy_loss.py  dice_loss.py  focal_loss.py  m_dice_loss.py  ohem.py  pmd_loss.py  pmd_loss_L1_L2.py  smooth_l1_loss.py
models/neck/: __init__.py  fpn.py  fpn_light.py  fpn_solo.py  sppf.py
models/utils/: conv_bn_relu.py
tools/Connected_components_mhz/cc_torch/csrc/: buf.h  buf_3d.cu
tools/ICDAR2COCO/: COCOConverter.py  convert.py
tools/solotext_util/: setup.py
tools/solotext_util/solotext_util/: __init__.py  cluster.py
tools/solotext_util/solotext_util/src/: clustering.cu  clustering.h  (+5 more)
tools/solotext_util2/: CMakeLists.txt  setup.py
tools/solotext_util2/solotext_util2/: __init__.py  cluster.py
tools/solotext_util2/solotext_util2/src/: get_text_masks.cu  registry.cu
utils/: center_instance.py  center_instance2.py  draw_gt.py  draw_mask.py
